<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <include
        android:id="@+id/include"
        layout="@layout/content_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"

        >

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_players"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="25dp"
            android:text="@string/choose_game"
            android:textSize="38sp" />

        <Button
            android:id="@+id/tic_tac_toe"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorPrimary"

            android:text="@string/tic_tac_toe"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:text = "@string/coming_soon"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="25sp"
            android:textStyle="bold"
            />


    </LinearLayout>

    <Button
        android:id="@+id/connect_four"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorPrimary"

        android:text="@string/connect_four"
        android:textSize="25sp"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>