<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConnectFour">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/player1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:freezesText="true"
            android:text="@string/player1"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/player2Text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/player2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:freezesText="true"
            android:text="@string/player2"
            android:textSize="20sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player1Text" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/greenBlue"
            android:freezesText="true"
            android:text="@string/reset"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/hardReset"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/hardReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:backgroundTint="@color/greenBlue"
            android:freezesText="true"
            android:text="@string/hardReset"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/player2Text"
            app:layout_constraintRight_toLeftOf="@id/button_reset"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background">

        <Button
            android:id="@+id/button_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/circle"

            android:backgroundTint="@color/noTurn"
            android:freezesText="true"

            android:textSize="60sp" />
    <!-- ok, not sure if we can fit a 6 x 7 board here... need to compress the circles
     * can't change the size inside the drawable xml file
     * can change using layout_xxxx = "xxx" -->
        <Button
            android:id="@+id/button_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/noTurn"
            android:freezesText="true"
            android:textSize="60sp" />
        <Button
            android:id="@+id/button_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/circle"

            android:backgroundTint="@color/noTurn"
            android:freezesText="true"

            android:textSize="60sp" />
        <Button
            android:id="@+id/button_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/circle"

            android:backgroundTint="@color/noTurn"
            android:freezesText="true"

            android:textSize="60sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background">

        <Button
            android:id="@+id/button_10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:freezesText="true"
            android:backgroundTint="@color/noTurn"

            android:textSize="60sp" />
        <Button
            android:id="@+id/button_11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:freezesText="true"
            android:backgroundTint="@color/noTurn"
            android:textSize="60sp" />
        <Button
            android:id="@+id/button_12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:freezesText="true"
            android:backgroundTint="@color/noTurn"
            android:textSize="60sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background">
        <Button
            android:id="@+id/button_20"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/noTurn"
            android:freezesText="true"
            android:textSize="60sp" />
        <Button
            android:id="@+id/button_21"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:freezesText="true"
            android:backgroundTint="@color/noTurn"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_22"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/noTurn"
            android:freezesText="true"
            android:textSize="60sp" />
    </LinearLayout>
</LinearLayout>
